The 'fake' outline is now used in for all browsers (no longer for IE only), since CSS outlines are not shown if the element is nested within a container with overflow="hidden".

--- a/components/src/org/riotfamily/components/runtime/resources/style/toolbar.css
+++ b/components/src/org/riotfamily/components/runtime/resources/style/toolbar.css
@@ -211,8 +211,6 @@ div.riot-editor {
 }
 
 .riot-editable-text:hover {
-	outline:2px dotted ${highlight};
-	-moz-outline:2px dotted ${highlight};
 	cursor: crosshair;
 }
 
